--- a/index.html
+++ b/index.html
@@ -328,50 +328,50 @@
             <a href="/" class="nav-link nav-link--active">Home</a>
           </li>
           <li class="nav-item has-dropdown">
-            <a href="services/" class="nav-link">
+            <a href="/services" class="nav-link">
               Services
               <svg class="nav-link__icon" viewBox="0 0 24 24" fill="currentColor"><path d="M7 10l5 5 5-5z"/></svg>
             </a>
             <div class="nav-dropdown">
-              <a href="services/janitorial-service/" class="nav-dropdown__link">
+              <a href="/services/janitorial-service" class="nav-dropdown__link">
                 <svg class="nav-dropdown__icon" viewBox="0 0 24 24" fill="currentColor"><path d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-7 14h-2v-4H8l4-4 4 4h-2v4z"/></svg>
                 Janitorial Service
               </a>
-              <a href="services/deep-cleaning/" class="nav-dropdown__link">
+              <a href="/services/deep-cleaning" class="nav-dropdown__link">
                 <svg class="nav-dropdown__icon" viewBox="0 0 24 24" fill="currentColor"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/></svg>
                 Deep Cleaning
               </a>
-              <a href="services/upholstery-cleaning/" class="nav-dropdown__link">
+              <a href="/services/upholstery-cleaning" class="nav-dropdown__link">
                 <svg class="nav-dropdown__icon" viewBox="0 0 24 24" fill="currentColor"><path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 14H4V8l8 5 8-5v10zm-8-7L4 6h16l-8 5z"/></svg>
                 Upholstery Cleaning
               </a>
-              <a href="services/carpet-cleaning/" class="nav-dropdown__link">
+              <a href="/services/carpet-cleaning" class="nav-dropdown__link">
                 <svg class="nav-dropdown__icon" viewBox="0 0 24 24" fill="currentColor"><path d="M4 6H2v14c0 1.1.9 2 2 2h14v-2H4V6zm16-4H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm0 14H8V4h12v12z"/></svg>
                 Carpet Cleaning
               </a>
-              <a href="services/general-housekeeping/" class="nav-dropdown__link">
+              <a href="/services/general-housekeeping" class="nav-dropdown__link">
                 <svg class="nav-dropdown__icon" viewBox="0 0 24 24" fill="currentColor"><path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/></svg>
                 General Housekeeping
               </a>
             </div>
           </li>
           <li class="nav-item has-dropdown">
-            <a href="locations/" class="nav-link">
+            <a href="/locations" class="nav-link">
               Service Areas
               <svg class="nav-link__icon" viewBox="0 0 24 24" fill="currentColor"><path d="M7 10l5 5 5-5z"/></svg>
             </a>
             <div class="nav-dropdown nav-dropdown--mega">
               <span class="nav-dropdown__title">Popular Cities</span>
               <div class="nav-dropdown__grid">
-                <a href="locations/marlborough-ma.html" class="nav-dropdown__link">Marlborough</a>
-                <a href="locations/framingham-ma.html" class="nav-dropdown__link">Framingham</a>
-                <a href="locations/worcester-ma.html" class="nav-dropdown__link">Worcester</a>
-                <a href="locations/hudson-ma.html" class="nav-dropdown__link">Hudson</a>
-                <a href="locations/westborough-ma.html" class="nav-dropdown__link">Westborough</a>
-                <a href="locations/natick-ma.html" class="nav-dropdown__link">Natick</a>
-                <a href="locations/newton-ma.html" class="nav-dropdown__link">Newton</a>
-                <a href="locations/wellesley-ma.html" class="nav-dropdown__link">Wellesley</a>
-                <a href="locations/" class="nav-dropdown__link text-primary font-semibold">View All Cities →</a>
+                <a href="/locations/marlborough-ma" class="nav-dropdown__link">Marlborough</a>
+                <a href="/locations/framingham-ma" class="nav-dropdown__link">Framingham</a>
+                <a href="/locations/worcester-ma" class="nav-dropdown__link">Worcester</a>
+                <a href="/locations/hudson-ma" class="nav-dropdown__link">Hudson</a>
+                <a href="/locations/westborough-ma" class="nav-dropdown__link">Westborough</a>
+                <a href="/locations/natick-ma" class="nav-dropdown__link">Natick</a>
+                <a href="/locations/newton-ma" class="nav-dropdown__link">Newton</a>
+                <a href="/locations/wellesley-ma" class="nav-dropdown__link">Wellesley</a>
+                <a href="/locations" class="nav-dropdown__link text-primary font-semibold">View All Cities →</a>
               </div>
             </div>
           </li>
@@ -490,7 +490,7 @@
             <div class="service-card__body">
               <h3 class="service-card__title">Janitorial Service</h3>
               <p class="service-card__text">Professional commercial cleaning for offices, shops, warehouses, and corporate facilities. Daily, weekly, or monthly schedules available.</p>
-              <a href="services/janitorial-service/" class="service-card__link" data-track="service-janitorial">
+              <a href="/services/janitorial-service" class="service-card__link" data-track="service-janitorial">
                 Learn More
                 <svg viewBox="0 0 24 24" fill="currentColor"><path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"/></svg>
               </a>
@@ -505,7 +505,7 @@
             <div class="service-card__body">
               <h3 class="service-card__title">Deep Cleaning</h3>
               <p class="service-card__text">Thorough top-to-bottom cleaning that reaches every corner. Perfect for move-ins, move-outs, seasonal cleaning, or special occasions.</p>
-              <a href="services/deep-cleaning/" class="service-card__link" data-track="service-deep-cleaning">
+              <a href="/services/deep-cleaning" class="service-card__link" data-track="service-deep-cleaning">
                 Learn More
                 <svg viewBox="0 0 24 24" fill="currentColor"><path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"/></svg>
               </a>
@@ -520,7 +520,7 @@
             <div class="service-card__body">
               <h3 class="service-card__title">Carpet Cleaning</h3>
               <p class="service-card__text">Professional carpet cleaning using advanced steam and dry cleaning methods. Remove stains, odors, and allergens for a healthier environment.</p>
-              <a href="services/carpet-cleaning/" class="service-card__link" data-track="service-carpet">
+              <a href="/services/carpet-cleaning" class="service-card__link" data-track="service-carpet">
                 Learn More
                 <svg viewBox="0 0 24 24" fill="currentColor"><path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"/></svg>
               </a>
@@ -535,7 +535,7 @@
             <div class="service-card__body">
               <h3 class="service-card__title">Upholstery Cleaning</h3>
               <p class="service-card__text">Expert cleaning for sofas, chairs, and all upholstered furniture. We restore fabrics and remove deep-set stains and odors.</p>
-              <a href="services/upholstery-cleaning/" class="service-card__link" data-track="service-upholstery">
+              <a href="/services/upholstery-cleaning" class="service-card__link" data-track="service-upholstery">
                 Learn More
                 <svg viewBox="0 0 24 24" fill="currentColor"><path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"/></svg>
               </a>
@@ -550,7 +550,7 @@
             <div class="service-card__body">
               <h3 class="service-card__title">General Housekeeping</h3>
               <p class="service-card__text">Comprehensive home cleaning services including dusting, vacuuming, mopping, kitchen and bathroom cleaning, and more.</p>
-              <a href="services/general-housekeeping/" class="service-card__link" data-track="service-housekeeping">
+              <a href="/services/general-housekeeping" class="service-card__link" data-track="service-housekeeping">
                 Learn More
                 <svg viewBox="0 0 24 24" fill="currentColor"><path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"/></svg>
               </a>
@@ -673,7 +673,7 @@
         </div>
 
         <div class="text-center" style="margin-top: 3rem;">
-          <a href="about.html" class="btn btn--primary btn--lg" data-track="cta-about">Learn More About Us</a>
+          <a href="/about" class="btn btn--primary btn--lg" data-track="cta-about">Learn More About Us</a>
         </div>
       </div>
     </section>
@@ -689,25 +689,25 @@
 
         <div class="cities-highlight">
           <div class="cities-grid animate-on-scroll animate-fade-up animate-delay-200">
-            <a href="locations/hudson-ma.html" class="city-tag">Hudson</a>
-            <a href="locations/marlborough-ma.html" class="city-tag">Marlborough</a>
-            <a href="locations/framingham-ma.html" class="city-tag">Framingham</a>
-            <a href="locations/westborough-ma.html" class="city-tag">Westborough</a>
-            <a href="locations/worcester-ma.html" class="city-tag">Worcester</a>
-            <a href="locations/natick-ma.html" class="city-tag">Natick</a>
-            <a href="locations/wellesley-ma.html" class="city-tag">Wellesley</a>
-            <a href="locations/newton-ma.html" class="city-tag">Newton</a>
-            <a href="locations/sudbury-ma.html" class="city-tag">Sudbury</a>
-            <a href="locations/concord-ma.html" class="city-tag">Concord</a>
-            <a href="locations/lexington-ma.html" class="city-tag">Lexington</a>
-            <a href="locations/waltham-ma.html" class="city-tag">Waltham</a>
-            <a href="locations/shrewsbury-ma.html" class="city-tag">Shrewsbury</a>
-            <a href="locations/northborough-ma.html" class="city-tag">Northborough</a>
-            <a href="locations/southborough-ma.html" class="city-tag">Southborough</a>
+            <a href="/locations/hudson-ma" class="city-tag">Hudson</a>
+            <a href="/locations/marlborough-ma" class="city-tag">Marlborough</a>
+            <a href="/locations/framingham-ma" class="city-tag">Framingham</a>
+            <a href="/locations/westborough-ma" class="city-tag">Westborough</a>
+            <a href="/locations/worcester-ma" class="city-tag">Worcester</a>
+            <a href="/locations/natick-ma" class="city-tag">Natick</a>
+            <a href="/locations/wellesley-ma" class="city-tag">Wellesley</a>
+            <a href="/locations/newton-ma" class="city-tag">Newton</a>
+            <a href="/locations/sudbury-ma" class="city-tag">Sudbury</a>
+            <a href="/locations/concord-ma" class="city-tag">Concord</a>
+            <a href="/locations/lexington-ma" class="city-tag">Lexington</a>
+            <a href="/locations/waltham-ma" class="city-tag">Waltham</a>
+            <a href="/locations/shrewsbury-ma" class="city-tag">Shrewsbury</a>
+            <a href="/locations/northborough-ma" class="city-tag">Northborough</a>
+            <a href="/locations/southborough-ma" class="city-tag">Southborough</a>
           </div>
 
           <div class="cities-highlight__cta animate-on-scroll animate-fade-up animate-delay-300">
-            <a href="locations/" class="btn btn--primary btn--lg" data-track="cta-all-locations">View All Service Areas</a>
+            <a href="/locations" class="btn btn--primary btn--lg" data-track="cta-all-locations">View All Service Areas</a>
           </div>
         </div>
       </div>
@@ -782,7 +782,7 @@
         </div>
 
         <div class="text-center" style="margin-top: 2.5rem;">
-          <a href="reviews.html" class="btn btn--primary btn--lg" data-track="cta-all-reviews">Read All Reviews</a>
+          <a href="/reviews" class="btn btn--primary btn--lg" data-track="cta-all-reviews">Read All Reviews</a>
         </div>
       </div>
     </section>
@@ -991,8 +991,8 @@
           <ul class="footer__links">
             <li><a href="/">Home</a></li>
             <li><a href="#about">About Us</a></li>
-            <li><a href="services/">Services</a></li>
-            <li><a href="locations/">Service Areas</a></li>
+            <li><a href="/services">Services</a></li>
+            <li><a href="/locations">Service Areas</a></li>
             <li><a href="#reviews">Reviews</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
@@ -1002,11 +1002,11 @@
         <div class="footer__col">
           <h4 class="footer__title">Our Services</h4>
           <ul class="footer__links">
-            <li><a href="services/janitorial-service/">Janitorial Service</a></li>
-            <li><a href="services/deep-cleaning/">Deep Cleaning</a></li>
-            <li><a href="services/carpet-cleaning/">Carpet Cleaning</a></li>
-            <li><a href="services/upholstery-cleaning/">Upholstery Cleaning</a></li>
-            <li><a href="services/general-housekeeping/">General Housekeeping</a></li>
+            <li><a href="/services/janitorial-service">Janitorial Service</a></li>
+            <li><a href="/services/deep-cleaning">Deep Cleaning</a></li>
+            <li><a href="/services/carpet-cleaning">Carpet Cleaning</a></li>
+            <li><a href="/services/upholstery-cleaning">Upholstery Cleaning</a></li>
+            <li><a href="/services/general-housekeeping">General Housekeeping</a></li>
           </ul>
         </div>
 
@@ -1014,17 +1014,17 @@
         <div class="footer__col">
           <h4 class="footer__title">Service Areas</h4>
           <div class="footer__cities">
-            <a href="locations/marlborough-ma.html">Marlborough</a>
-            <a href="locations/framingham-ma.html">Framingham</a>
-            <a href="locations/worcester-ma.html">Worcester</a>
-            <a href="locations/hudson-ma.html">Hudson</a>
-            <a href="locations/westborough-ma.html">Westborough</a>
-            <a href="locations/natick-ma.html">Natick</a>
-            <a href="locations/wellesley-ma.html">Wellesley</a>
-            <a href="locations/newton-ma.html">Newton</a>
+            <a href="/locations/marlborough-ma">Marlborough</a>
+            <a href="/locations/framingham-ma">Framingham</a>
+            <a href="/locations/worcester-ma">Worcester</a>
+            <a href="/locations/hudson-ma">Hudson</a>
+            <a href="/locations/westborough-ma">Westborough</a>
+            <a href="/locations/natick-ma">Natick</a>
+            <a href="/locations/wellesley-ma">Wellesley</a>
+            <a href="/locations/newton-ma">Newton</a>
           </div>
           <div class="footer__cities-more">
-            <a href="locations/">View All 100+ Cities →</a>
+            <a href="/locations">View All 100+ Cities →</a>
           </div>
         </div>
 
@@ -1092,9 +1092,9 @@
       <div class="footer__bottom">
         <p class="footer__copyright">&copy; 2025 Dorys Janitorial Cleaning Services Inc. All rights reserved.</p>
         <nav class="footer__legal">
-          <a href="privacy.html">Privacy Policy</a>
-          <a href="terms.html">Terms of Service</a>
-          <a href="sitemap.html">Sitemap</a>
+          <a href="/privacy">Privacy Policy</a>
+          <a href="/terms">Terms of Service</a>
+          <a href="/sitemap">Sitemap</a>
         </nav>
       </div>
     </div>
