--- a/locations/index.html
+++ b/locations/index.html
@@ -12,11 +12,11 @@
   <meta name="keywords" content="cleaning services Massachusetts, janitorial services near me, cleaning company MA, house cleaning services, commercial cleaning Massachusetts">
   <meta name="author" content="Dorys Janitorial Cleaning Services Inc.">
   <meta name="robots" content="index, follow">
-  <link rel="canonical" href="https://doryscleaningservices.com/locations/">
+  <link rel="canonical" href="https://doryscleaningservices.com/locations">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://doryscleaningservices.com/locations/">
+  <meta property="og:url" content="https://doryscleaningservices.com/locations">
   <meta property="og:title" content="Service Areas - 100+ Massachusetts Cities | Dorys Janitorial">
   <meta property="og:description" content="Dorys Janitorial Cleaning Services proudly serves 100+ cities across Massachusetts.">
   <meta property="og:image" content="https://doryscleaningservices.com/assets/images/og-locations.jpg">
@@ -25,7 +25,7 @@
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://doryscleaningservices.com/locations/">
+  <meta property="twitter:url" content="https://doryscleaningservices.com/locations">
   <meta property="twitter:title" content="Service Areas - 100+ Massachusetts Cities | Dorys Janitorial">
   <meta property="twitter:description" content="Dorys Janitorial Cleaning Services proudly serves 100+ cities across Massachusetts.">
   <meta property="twitter:image" content="https://doryscleaningservices.com/assets/images/og-locations.jpg">
