--- a/privacy.html
+++ b/privacy.html
@@ -58,33 +58,33 @@
   <!-- Header -->
   <header class="header">
     <div class="container header__wrapper">
-      <a href="index.html" class="header__logo">
+      <a href="/" class="header__logo">
         <img src="assets/images/logo/logo-original.jpg" alt="Dorys Janitorial Cleaning Services Logo" width="180" height="60">
       </a>
       <nav class="header__nav" aria-label="Main navigation">
         <ul class="nav-list">
-          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+          <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
           <li class="nav-item has-dropdown">
-            <a href="services/" class="nav-link">Services <svg class="nav-link__icon" viewBox="0 0 24 24" fill="currentColor"><path d="M7 10l5 5 5-5z"/></svg></a>
+            <a href="/services" class="nav-link">Services <svg class="nav-link__icon" viewBox="0 0 24 24" fill="currentColor"><path d="M7 10l5 5 5-5z"/></svg></a>
             <div class="nav-dropdown">
-              <a href="services/janitorial-service/" class="nav-dropdown__link">Janitorial Service</a>
-              <a href="services/deep-cleaning/" class="nav-dropdown__link">Deep Cleaning</a>
-              <a href="services/upholstery-cleaning/" class="nav-dropdown__link">Upholstery Cleaning</a>
-              <a href="services/carpet-cleaning/" class="nav-dropdown__link">Carpet Cleaning</a>
-              <a href="services/general-housekeeping/" class="nav-dropdown__link">General Housekeeping</a>
+              <a href="/services/janitorial-service" class="nav-dropdown__link">Janitorial Service</a>
+              <a href="/services/deep-cleaning" class="nav-dropdown__link">Deep Cleaning</a>
+              <a href="/services/upholstery-cleaning" class="nav-dropdown__link">Upholstery Cleaning</a>
+              <a href="/services/carpet-cleaning" class="nav-dropdown__link">Carpet Cleaning</a>
+              <a href="/services/general-housekeeping" class="nav-dropdown__link">General Housekeeping</a>
             </div>
           </li>
           <li class="nav-item has-dropdown">
-            <a href="locations/" class="nav-link">Service Areas <svg class="nav-link__icon" viewBox="0 0 24 24" fill="currentColor"><path d="M7 10l5 5 5-5z"/></svg></a>
+            <a href="/locations" class="nav-link">Service Areas <svg class="nav-link__icon" viewBox="0 0 24 24" fill="currentColor"><path d="M7 10l5 5 5-5z"/></svg></a>
             <div class="nav-dropdown nav-dropdown--mega">
               <span class="nav-dropdown__title">Popular Cities</span>
               <div class="nav-dropdown__grid">
-                <a href="locations/marlborough-ma.html" class="nav-dropdown__link">Marlborough</a>
-                <a href="locations/framingham-ma.html" class="nav-dropdown__link">Framingham</a>
-                <a href="locations/worcester-ma.html" class="nav-dropdown__link">Worcester</a>
-                <a href="locations/hudson-ma.html" class="nav-dropdown__link">Hudson</a>
-                <a href="locations/natick-ma.html" class="nav-dropdown__link">Natick</a>
-                <a href="locations/" class="nav-dropdown__link">View All →</a>
+                <a href="/locations/marlborough-ma" class="nav-dropdown__link">Marlborough</a>
+                <a href="/locations/framingham-ma" class="nav-dropdown__link">Framingham</a>
+                <a href="/locations/worcester-ma" class="nav-dropdown__link">Worcester</a>
+                <a href="/locations/hudson-ma" class="nav-dropdown__link">Hudson</a>
+                <a href="/locations/natick-ma" class="nav-dropdown__link">Natick</a>
+                <a href="/locations" class="nav-dropdown__link">View All →</a>
               </div>
             </div>
           </li>
@@ -229,8 +229,8 @@
           <ul class="footer__links">
             <li><a href="/">Home</a></li>
             <li><a href="#about">About Us</a></li>
-            <li><a href="services/">Services</a></li>
-            <li><a href="locations/">Service Areas</a></li>
+            <li><a href="/services">Services</a></li>
+            <li><a href="/locations">Service Areas</a></li>
             <li><a href="#reviews">Reviews</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
@@ -240,11 +240,11 @@
         <div class="footer__col">
           <h4 class="footer__title">Our Services</h4>
           <ul class="footer__links">
-            <li><a href="services/janitorial-service/">Janitorial Service</a></li>
-            <li><a href="services/deep-cleaning/">Deep Cleaning</a></li>
-            <li><a href="services/carpet-cleaning/">Carpet Cleaning</a></li>
-            <li><a href="services/upholstery-cleaning/">Upholstery Cleaning</a></li>
-            <li><a href="services/general-housekeeping/">General Housekeeping</a></li>
+            <li><a href="/services/janitorial-service">Janitorial Service</a></li>
+            <li><a href="/services/deep-cleaning">Deep Cleaning</a></li>
+            <li><a href="/services/carpet-cleaning">Carpet Cleaning</a></li>
+            <li><a href="/services/upholstery-cleaning">Upholstery Cleaning</a></li>
+            <li><a href="/services/general-housekeeping">General Housekeeping</a></li>
           </ul>
         </div>
 
@@ -252,17 +252,17 @@
         <div class="footer__col">
           <h4 class="footer__title">Service Areas</h4>
           <div class="footer__cities">
-            <a href="locations/marlborough-ma.html">Marlborough</a>
-            <a href="locations/framingham-ma.html">Framingham</a>
-            <a href="locations/worcester-ma.html">Worcester</a>
-            <a href="locations/hudson-ma.html">Hudson</a>
-            <a href="locations/westborough-ma.html">Westborough</a>
-            <a href="locations/natick-ma.html">Natick</a>
-            <a href="locations/wellesley-ma.html">Wellesley</a>
-            <a href="locations/newton-ma.html">Newton</a>
+            <a href="/locations/marlborough-ma">Marlborough</a>
+            <a href="/locations/framingham-ma">Framingham</a>
+            <a href="/locations/worcester-ma">Worcester</a>
+            <a href="/locations/hudson-ma">Hudson</a>
+            <a href="/locations/westborough-ma">Westborough</a>
+            <a href="/locations/natick-ma">Natick</a>
+            <a href="/locations/wellesley-ma">Wellesley</a>
+            <a href="/locations/newton-ma">Newton</a>
           </div>
           <div class="footer__cities-more">
-            <a href="locations/">View All 100+ Cities →</a>
+            <a href="/locations">View All 100+ Cities →</a>
           </div>
         </div>
 
@@ -330,9 +330,9 @@
       <div class="footer__bottom">
         <p class="footer__copyright">&copy; 2025 Dorys Janitorial Cleaning Services Inc. All rights reserved.</p>
         <nav class="footer__legal">
-          <a href="privacy.html">Privacy Policy</a>
-          <a href="terms.html">Terms of Service</a>
-          <a href="sitemap.html">Sitemap</a>
+          <a href="/privacy">Privacy Policy</a>
+          <a href="/terms">Terms of Service</a>
+          <a href="/sitemap">Sitemap</a>
         </nav>
       </div>
     </div>
