--- a/reviews.html
+++ b/reviews.html
@@ -205,7 +205,7 @@
   <header class="header" id="header">
     <div class="container">
       <div class="header__content">
-        <a href="index.html" class="header__logo">
+        <a href="/" class="header__logo">
           <img src="assets/images/logo/logo.jpg" alt="Dorys Janitorial Cleaning Services Logo" class="header__logo-img">
           <div class="header__logo-text">
             <span class="header__logo-name">Dorys Cleaning</span>
@@ -216,49 +216,49 @@
         <nav class="header__nav" id="main-nav">
           <ul class="header__menu">
             <li class="header__menu-item">
-              <a href="index.html" class="header__menu-link">Home</a>
+              <a href="/" class="header__menu-link">Home</a>
             </li>
             <li class="header__menu-item header__menu-item--dropdown">
-              <a href="services/index.html" class="header__menu-link">
+              <a href="/services" class="header__menu-link">
                 Services
                 <svg class="header__dropdown-icon" viewBox="0 0 24 24" fill="currentColor" width="16" height="16"><path d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"/></svg>
               </a>
               <ul class="header__dropdown">
-                <li><a href="services/janitorial-service/index.html">Janitorial Service</a></li>
-                <li><a href="services/deep-cleaning/index.html">Deep Cleaning</a></li>
-                <li><a href="services/upholstery-cleaning/index.html">Upholstery Cleaning</a></li>
-                <li><a href="services/carpet-cleaning/index.html">Carpet Cleaning</a></li>
-                <li><a href="services/general-housekeeping/index.html">General Housekeeping</a></li>
+                <li><a href="/services/janitorial-service">Janitorial Service</a></li>
+                <li><a href="/services/deep-cleaning">Deep Cleaning</a></li>
+                <li><a href="/services/upholstery-cleaning">Upholstery Cleaning</a></li>
+                <li><a href="/services/carpet-cleaning">Carpet Cleaning</a></li>
+                <li><a href="/services/general-housekeeping">General Housekeeping</a></li>
               </ul>
             </li>
             <li class="header__menu-item header__menu-item--dropdown">
-              <a href="locations/index.html" class="header__menu-link">
+              <a href="/locations" class="header__menu-link">
                 Service Areas
                 <svg class="header__dropdown-icon" viewBox="0 0 24 24" fill="currentColor" width="16" height="16"><path d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"/></svg>
               </a>
               <ul class="header__dropdown header__dropdown--mega">
-                <li><a href="locations/hudson-ma.html">Hudson</a></li>
-                <li><a href="locations/framingham-ma.html">Framingham</a></li>
-                <li><a href="locations/marlborough-ma.html">Marlborough</a></li>
-                <li><a href="locations/worcester-ma.html">Worcester</a></li>
-                <li><a href="locations/natick-ma.html">Natick</a></li>
-                <li><a href="locations/index.html" class="header__dropdown-all">View All Areas →</a></li>
+                <li><a href="/locations/hudson-ma">Hudson</a></li>
+                <li><a href="/locations/framingham-ma">Framingham</a></li>
+                <li><a href="/locations/marlborough-ma">Marlborough</a></li>
+                <li><a href="/locations/worcester-ma">Worcester</a></li>
+                <li><a href="/locations/natick-ma">Natick</a></li>
+                <li><a href="/locations" class="header__dropdown-all">View All Areas →</a></li>
               </ul>
             </li>
             <li class="header__menu-item">
-              <a href="about.html" class="header__menu-link">About Us</a>
+              <a href="/about" class="header__menu-link">About Us</a>
             </li>
             <li class="header__menu-item">
-              <a href="reviews.html" class="header__menu-link header__menu-link--active">Reviews</a>
+              <a href="/reviews" class="header__menu-link header__menu-link--active">Reviews</a>
             </li>
             <li class="header__menu-item">
-              <a href="contact.html" class="header__menu-link">Contact</a>
+              <a href="/contact" class="header__menu-link">Contact</a>
             </li>
           </ul>
         </nav>
 
         <div class="header__actions">
-          <a href="contact.html" class="btn btn--primary btn--pulse">
+          <a href="/contact" class="btn btn--primary btn--pulse">
             Get a Free Quote
           </a>
           <button class="header__mobile-toggle" id="mobile-toggle" aria-label="Toggle menu">
@@ -275,28 +275,28 @@
   <div class="mobile-menu" id="mobile-menu">
     <div class="mobile-menu__content">
       <ul class="mobile-menu__list">
-        <li><a href="index.html">Home</a></li>
+        <li><a href="/">Home</a></li>
         <li class="mobile-menu__item--has-children">
-          <a href="services/index.html">Services</a>
+          <a href="/services">Services</a>
           <ul class="mobile-menu__submenu">
-            <li><a href="services/janitorial-service/index.html">Janitorial Service</a></li>
-            <li><a href="services/deep-cleaning/index.html">Deep Cleaning</a></li>
-            <li><a href="services/upholstery-cleaning/index.html">Upholstery Cleaning</a></li>
-            <li><a href="services/carpet-cleaning/index.html">Carpet Cleaning</a></li>
-            <li><a href="services/general-housekeeping/index.html">General Housekeeping</a></li>
+            <li><a href="/services/janitorial-service">Janitorial Service</a></li>
+            <li><a href="/services/deep-cleaning">Deep Cleaning</a></li>
+            <li><a href="/services/upholstery-cleaning">Upholstery Cleaning</a></li>
+            <li><a href="/services/carpet-cleaning">Carpet Cleaning</a></li>
+            <li><a href="/services/general-housekeeping">General Housekeeping</a></li>
           </ul>
         </li>
-        <li><a href="locations/index.html">Service Areas</a></li>
-        <li><a href="about.html">About Us</a></li>
-        <li><a href="reviews.html" class="active">Reviews</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="/locations">Service Areas</a></li>
+        <li><a href="/about">About Us</a></li>
+        <li><a href="/reviews" class="active">Reviews</a></li>
+        <li><a href="/contact">Contact</a></li>
       </ul>
       <div class="mobile-menu__cta">
         <a href="tel:+19783078107" class="btn btn--secondary btn--block">
           <svg viewBox="0 0 24 24" fill="currentColor" width="20" height="20"><path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"/></svg>
           Call (978) 307-8107
         </a>
-        <a href="contact.html" class="btn btn--primary btn--block">Get a Free Quote</a>
+        <a href="/contact" class="btn btn--primary btn--block">Get a Free Quote</a>
       </div>
     </div>
   </div>
@@ -307,7 +307,7 @@
       <div class="container">
         <ol class="breadcrumb__list">
           <li class="breadcrumb__item">
-            <a href="index.html" class="breadcrumb__link">Home</a>
+            <a href="/" class="breadcrumb__link">Home</a>
           </li>
           <li class="breadcrumb__item breadcrumb__item--active">
             <span>Reviews</span>
@@ -677,8 +677,8 @@
           <ul class="footer__links">
             <li><a href="/">Home</a></li>
             <li><a href="#about">About Us</a></li>
-            <li><a href="services/">Services</a></li>
-            <li><a href="locations/">Service Areas</a></li>
+            <li><a href="/services">Services</a></li>
+            <li><a href="/locations">Service Areas</a></li>
             <li><a href="#reviews">Reviews</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
@@ -688,11 +688,11 @@
         <div class="footer__col">
           <h4 class="footer__title">Our Services</h4>
           <ul class="footer__links">
-            <li><a href="services/janitorial-service/">Janitorial Service</a></li>
-            <li><a href="services/deep-cleaning/">Deep Cleaning</a></li>
-            <li><a href="services/carpet-cleaning/">Carpet Cleaning</a></li>
-            <li><a href="services/upholstery-cleaning/">Upholstery Cleaning</a></li>
-            <li><a href="services/general-housekeeping/">General Housekeeping</a></li>
+            <li><a href="/services/janitorial-service">Janitorial Service</a></li>
+            <li><a href="/services/deep-cleaning">Deep Cleaning</a></li>
+            <li><a href="/services/carpet-cleaning">Carpet Cleaning</a></li>
+            <li><a href="/services/upholstery-cleaning">Upholstery Cleaning</a></li>
+            <li><a href="/services/general-housekeeping">General Housekeeping</a></li>
           </ul>
         </div>
 
@@ -700,17 +700,17 @@
         <div class="footer__col">
           <h4 class="footer__title">Service Areas</h4>
           <div class="footer__cities">
-            <a href="locations/marlborough-ma.html">Marlborough</a>
-            <a href="locations/framingham-ma.html">Framingham</a>
-            <a href="locations/worcester-ma.html">Worcester</a>
-            <a href="locations/hudson-ma.html">Hudson</a>
-            <a href="locations/westborough-ma.html">Westborough</a>
-            <a href="locations/natick-ma.html">Natick</a>
-            <a href="locations/wellesley-ma.html">Wellesley</a>
-            <a href="locations/newton-ma.html">Newton</a>
+            <a href="/locations/marlborough-ma">Marlborough</a>
+            <a href="/locations/framingham-ma">Framingham</a>
+            <a href="/locations/worcester-ma">Worcester</a>
+            <a href="/locations/hudson-ma">Hudson</a>
+            <a href="/locations/westborough-ma">Westborough</a>
+            <a href="/locations/natick-ma">Natick</a>
+            <a href="/locations/wellesley-ma">Wellesley</a>
+            <a href="/locations/newton-ma">Newton</a>
           </div>
           <div class="footer__cities-more">
-            <a href="locations/">View All 100+ Cities →</a>
+            <a href="/locations">View All 100+ Cities →</a>
           </div>
         </div>
 
@@ -778,9 +778,9 @@
       <div class="footer__bottom">
         <p class="footer__copyright">&copy; 2025 Dorys Janitorial Cleaning Services Inc. All rights reserved.</p>
         <nav class="footer__legal">
-          <a href="privacy.html">Privacy Policy</a>
-          <a href="terms.html">Terms of Service</a>
-          <a href="sitemap.html">Sitemap</a>
+          <a href="/privacy">Privacy Policy</a>
+          <a href="/terms">Terms of Service</a>
+          <a href="/sitemap">Sitemap</a>
         </nav>
       </div>
     </div>
