--- a/services/index.html
+++ b/services/index.html
@@ -210,7 +210,7 @@
               <a href="/" class="header__menu-link">Home</a>
             </li>
             <li class="header__menu-item header__menu-item--dropdown">
-              <a href="index.html" class="header__menu-link header__menu-link--active">
+              <a href="/" class="header__menu-link header__menu-link--active">
                 Services
                 <svg class="header__dropdown-icon" viewBox="0 0 24 24" fill="currentColor" width="16" height="16"><path d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"/></svg>
               </a>
@@ -223,17 +223,17 @@
               </ul>
             </li>
             <li class="header__menu-item header__menu-item--dropdown">
-              <a href="../locations/index.html" class="header__menu-link">
+              <a href="/locations" class="header__menu-link">
                 Service Areas
                 <svg class="header__dropdown-icon" viewBox="0 0 24 24" fill="currentColor" width="16" height="16"><path d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"/></svg>
               </a>
               <ul class="header__dropdown header__dropdown--mega">
-                <li><a href="../locations/hudson-ma.html">Hudson</a></li>
-                <li><a href="../locations/framingham-ma.html">Framingham</a></li>
-                <li><a href="../locations/marlborough-ma.html">Marlborough</a></li>
-                <li><a href="../locations/worcester-ma.html">Worcester</a></li>
-                <li><a href="../locations/natick-ma.html">Natick</a></li>
-                <li><a href="../locations/index.html" class="header__dropdown-all">View All Areas →</a></li>
+                <li><a href="/locations/hudson-ma">Hudson</a></li>
+                <li><a href="/locations/framingham-ma">Framingham</a></li>
+                <li><a href="/locations/marlborough-ma">Marlborough</a></li>
+                <li><a href="/locations/worcester-ma">Worcester</a></li>
+                <li><a href="/locations/natick-ma">Natick</a></li>
+                <li><a href="/locations" class="header__dropdown-all">View All Areas →</a></li>
               </ul>
             </li>
             <li class="header__menu-item">
@@ -268,7 +268,7 @@
       <ul class="mobile-menu__list">
         <li><a href="/">Home</a></li>
         <li class="mobile-menu__item--has-children">
-          <a href="index.html" class="active">Services</a>
+          <a href="/" class="active">Services</a>
           <ul class="mobile-menu__submenu">
             <li><a href="janitorial-service/index.html">Janitorial Service</a></li>
             <li><a href="deep-cleaning/index.html">Deep Cleaning</a></li>
@@ -277,7 +277,7 @@
             <li><a href="general-housekeeping/index.html">General Housekeeping</a></li>
           </ul>
         </li>
-        <li><a href="../locations/index.html">Service Areas</a></li>
+        <li><a href="/locations">Service Areas</a></li>
         <li><a href="../#about">About Us</a></li>
         <li><a href="../#reviews">Reviews</a></li>
         <li><a href="../#contact">Contact</a></li>
@@ -540,21 +540,21 @@
 
         <div class="cities-highlight animate-fade-in-up" style="--animation-delay: 0.2s">
           <div class="cities-grid">
-            <a href="../locations/hudson-ma.html" class="city-tag">Hudson</a>
-            <a href="../locations/framingham-ma.html" class="city-tag">Framingham</a>
-            <a href="../locations/marlborough-ma.html" class="city-tag">Marlborough</a>
-            <a href="../locations/worcester-ma.html" class="city-tag">Worcester</a>
-            <a href="../locations/natick-ma.html" class="city-tag">Natick</a>
-            <a href="../locations/westborough-ma.html" class="city-tag">Westborough</a>
-            <a href="../locations/sudbury-ma.html" class="city-tag">Sudbury</a>
-            <a href="../locations/wellesley-ma.html" class="city-tag">Wellesley</a>
-            <a href="../locations/newton-ma.html" class="city-tag">Newton</a>
-            <a href="../locations/concord-ma.html" class="city-tag">Concord</a>
-            <a href="../locations/lexington-ma.html" class="city-tag">Lexington</a>
-            <a href="../locations/waltham-ma.html" class="city-tag">Waltham</a>
+            <a href="/locations/hudson-ma" class="city-tag">Hudson</a>
+            <a href="/locations/framingham-ma" class="city-tag">Framingham</a>
+            <a href="/locations/marlborough-ma" class="city-tag">Marlborough</a>
+            <a href="/locations/worcester-ma" class="city-tag">Worcester</a>
+            <a href="/locations/natick-ma" class="city-tag">Natick</a>
+            <a href="/locations/westborough-ma" class="city-tag">Westborough</a>
+            <a href="/locations/sudbury-ma" class="city-tag">Sudbury</a>
+            <a href="/locations/wellesley-ma" class="city-tag">Wellesley</a>
+            <a href="/locations/newton-ma" class="city-tag">Newton</a>
+            <a href="/locations/concord-ma" class="city-tag">Concord</a>
+            <a href="/locations/lexington-ma" class="city-tag">Lexington</a>
+            <a href="/locations/waltham-ma" class="city-tag">Waltham</a>
           </div>
           <div class="cities-highlight__cta">
-            <a href="../locations/index.html" class="btn btn--secondary">
+            <a href="/locations" class="btn btn--secondary">
               View All Service Areas
               <svg viewBox="0 0 24 24" fill="currentColor" width="18" height="18"><path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/></svg>
             </a>
@@ -664,14 +664,14 @@
         <div class="footer__col">
           <h4 class="footer__title">Service Areas</h4>
           <div class="footer__cities">
-            <a href="../locations/marlborough-ma.html">Marlborough</a>
-            <a href="../locations/framingham-ma.html">Framingham</a>
-            <a href="../locations/worcester-ma.html">Worcester</a>
-            <a href="../locations/hudson-ma.html">Hudson</a>
-            <a href="../locations/westborough-ma.html">Westborough</a>
-            <a href="../locations/natick-ma.html">Natick</a>
-            <a href="../locations/wellesley-ma.html">Wellesley</a>
-            <a href="../locations/newton-ma.html">Newton</a>
+            <a href="/locations/marlborough-ma">Marlborough</a>
+            <a href="/locations/framingham-ma">Framingham</a>
+            <a href="/locations/worcester-ma">Worcester</a>
+            <a href="/locations/hudson-ma">Hudson</a>
+            <a href="/locations/westborough-ma">Westborough</a>
+            <a href="/locations/natick-ma">Natick</a>
+            <a href="/locations/wellesley-ma">Wellesley</a>
+            <a href="/locations/newton-ma">Newton</a>
           </div>
           <div class="footer__cities-more">
             <a href="../locations/">View All 100+ Cities →</a>
