--- a/sitemap.html
+++ b/sitemap.html
@@ -133,50 +133,50 @@
             <a href="/" class="nav-link">Home</a>
           </li>
           <li class="nav-item has-dropdown">
-            <a href="services/" class="nav-link">
+            <a href="/services" class="nav-link">
               Services
               <svg class="nav-link__icon" viewBox="0 0 24 24" fill="currentColor"><path d="M7 10l5 5 5-5z"/></svg>
             </a>
             <div class="nav-dropdown">
-              <a href="services/janitorial-service/" class="nav-dropdown__link">
+              <a href="/services/janitorial-service" class="nav-dropdown__link">
                 <svg class="nav-dropdown__icon" viewBox="0 0 24 24" fill="currentColor"><path d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-7 14h-2v-4H8l4-4 4 4h-2v4z"/></svg>
                 Janitorial Service
               </a>
-              <a href="services/deep-cleaning/" class="nav-dropdown__link">
+              <a href="/services/deep-cleaning" class="nav-dropdown__link">
                 <svg class="nav-dropdown__icon" viewBox="0 0 24 24" fill="currentColor"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/></svg>
                 Deep Cleaning
               </a>
-              <a href="services/upholstery-cleaning/" class="nav-dropdown__link">
+              <a href="/services/upholstery-cleaning" class="nav-dropdown__link">
                 <svg class="nav-dropdown__icon" viewBox="0 0 24 24" fill="currentColor"><path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 14H4V8l8 5 8-5v10zm-8-7L4 6h16l-8 5z"/></svg>
                 Upholstery Cleaning
               </a>
-              <a href="services/carpet-cleaning/" class="nav-dropdown__link">
+              <a href="/services/carpet-cleaning" class="nav-dropdown__link">
                 <svg class="nav-dropdown__icon" viewBox="0 0 24 24" fill="currentColor"><path d="M4 6H2v14c0 1.1.9 2 2 2h14v-2H4V6zm16-4H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm0 14H8V4h12v12z"/></svg>
                 Carpet Cleaning
               </a>
-              <a href="services/general-housekeeping/" class="nav-dropdown__link">
+              <a href="/services/general-housekeeping" class="nav-dropdown__link">
                 <svg class="nav-dropdown__icon" viewBox="0 0 24 24" fill="currentColor"><path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/></svg>
                 General Housekeeping
               </a>
             </div>
           </li>
           <li class="nav-item has-dropdown">
-            <a href="locations/" class="nav-link">
+            <a href="/locations" class="nav-link">
               Service Areas
               <svg class="nav-link__icon" viewBox="0 0 24 24" fill="currentColor"><path d="M7 10l5 5 5-5z"/></svg>
             </a>
             <div class="nav-dropdown nav-dropdown--mega">
               <span class="nav-dropdown__title">Popular Cities</span>
               <div class="nav-dropdown__grid">
-                <a href="locations/marlborough-ma.html" class="nav-dropdown__link">Marlborough</a>
-                <a href="locations/framingham-ma.html" class="nav-dropdown__link">Framingham</a>
-                <a href="locations/worcester-ma.html" class="nav-dropdown__link">Worcester</a>
-                <a href="locations/hudson-ma.html" class="nav-dropdown__link">Hudson</a>
-                <a href="locations/westborough-ma.html" class="nav-dropdown__link">Westborough</a>
-                <a href="locations/natick-ma.html" class="nav-dropdown__link">Natick</a>
-                <a href="locations/newton-ma.html" class="nav-dropdown__link">Newton</a>
-                <a href="locations/wellesley-ma.html" class="nav-dropdown__link">Wellesley</a>
-                <a href="locations/" class="nav-dropdown__link text-primary font-semibold">View All Cities →</a>
+                <a href="/locations/marlborough-ma" class="nav-dropdown__link">Marlborough</a>
+                <a href="/locations/framingham-ma" class="nav-dropdown__link">Framingham</a>
+                <a href="/locations/worcester-ma" class="nav-dropdown__link">Worcester</a>
+                <a href="/locations/hudson-ma" class="nav-dropdown__link">Hudson</a>
+                <a href="/locations/westborough-ma" class="nav-dropdown__link">Westborough</a>
+                <a href="/locations/natick-ma" class="nav-dropdown__link">Natick</a>
+                <a href="/locations/newton-ma" class="nav-dropdown__link">Newton</a>
+                <a href="/locations/wellesley-ma" class="nav-dropdown__link">Wellesley</a>
+                <a href="/locations" class="nav-dropdown__link text-primary font-semibold">View All Cities →</a>
               </div>
             </div>
           </li>
@@ -239,11 +239,11 @@
           <h3>Main Pages</h3>
           <ul class="sitemap-list">
             <li><a href="/">Home</a></li>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
-            <li><a href="reviews.html">Customer Reviews</a></li>
-            <li><a href="privacy.html">Privacy Policy</a></li>
-            <li><a href="terms.html">Terms of Service</a></li>
+            <li><a href="/about">About Us</a></li>
+            <li><a href="/contact">Contact Us</a></li>
+            <li><a href="/reviews">Customer Reviews</a></li>
+            <li><a href="/privacy">Privacy Policy</a></li>
+            <li><a href="/terms">Terms of Service</a></li>
           </ul>
         </div>
 
@@ -251,12 +251,12 @@
         <div class="sitemap-section">
           <h3>Our Services</h3>
           <ul class="sitemap-list sitemap-list--services">
-            <li><a href="services/">All Services</a></li>
-            <li><a href="services/janitorial-service/">Janitorial Service</a></li>
-            <li><a href="services/deep-cleaning/">Deep Cleaning</a></li>
-            <li><a href="services/carpet-cleaning/">Carpet Cleaning</a></li>
-            <li><a href="services/upholstery-cleaning/">Upholstery Cleaning</a></li>
-            <li><a href="services/general-housekeeping/">General Housekeeping</a></li>
+            <li><a href="/services">All Services</a></li>
+            <li><a href="/services/janitorial-service">Janitorial Service</a></li>
+            <li><a href="/services/deep-cleaning">Deep Cleaning</a></li>
+            <li><a href="/services/carpet-cleaning">Carpet Cleaning</a></li>
+            <li><a href="/services/upholstery-cleaning">Upholstery Cleaning</a></li>
+            <li><a href="/services/general-housekeeping">General Housekeeping</a></li>
           </ul>
         </div>
 
@@ -264,24 +264,24 @@
         <div class="sitemap-section">
           <h3>Service Areas</h3>
           <ul class="sitemap-list">
-            <li><a href="locations/">All Service Areas</a></li>
-            <li><a href="locations/marlborough-ma.html">Marlborough, MA</a></li>
-            <li><a href="locations/framingham-ma.html">Framingham, MA</a></li>
-            <li><a href="locations/worcester-ma.html">Worcester, MA</a></li>
-            <li><a href="locations/hudson-ma.html">Hudson, MA</a></li>
-            <li><a href="locations/westborough-ma.html">Westborough, MA</a></li>
-            <li><a href="locations/natick-ma.html">Natick, MA</a></li>
-            <li><a href="locations/newton-ma.html">Newton, MA</a></li>
-            <li><a href="locations/wellesley-ma.html">Wellesley, MA</a></li>
-            <li><a href="locations/sudbury-ma.html">Sudbury, MA</a></li>
-            <li><a href="locations/concord-ma.html">Concord, MA</a></li>
-            <li><a href="locations/lexington-ma.html">Lexington, MA</a></li>
-            <li><a href="locations/waltham-ma.html">Waltham, MA</a></li>
-            <li><a href="locations/shrewsbury-ma.html">Shrewsbury, MA</a></li>
-            <li><a href="locations/northborough-ma.html">Northborough, MA</a></li>
-            <li><a href="locations/southborough-ma.html">Southborough, MA</a></li>
+            <li><a href="/locations">All Service Areas</a></li>
+            <li><a href="/locations/marlborough-ma">Marlborough, MA</a></li>
+            <li><a href="/locations/framingham-ma">Framingham, MA</a></li>
+            <li><a href="/locations/worcester-ma">Worcester, MA</a></li>
+            <li><a href="/locations/hudson-ma">Hudson, MA</a></li>
+            <li><a href="/locations/westborough-ma">Westborough, MA</a></li>
+            <li><a href="/locations/natick-ma">Natick, MA</a></li>
+            <li><a href="/locations/newton-ma">Newton, MA</a></li>
+            <li><a href="/locations/wellesley-ma">Wellesley, MA</a></li>
+            <li><a href="/locations/sudbury-ma">Sudbury, MA</a></li>
+            <li><a href="/locations/concord-ma">Concord, MA</a></li>
+            <li><a href="/locations/lexington-ma">Lexington, MA</a></li>
+            <li><a href="/locations/waltham-ma">Waltham, MA</a></li>
+            <li><a href="/locations/shrewsbury-ma">Shrewsbury, MA</a></li>
+            <li><a href="/locations/northborough-ma">Northborough, MA</a></li>
+            <li><a href="/locations/southborough-ma">Southborough, MA</a></li>
           </ul>
-          <p style="margin-top: 1rem;"><a href="locations/" class="btn btn--primary">View All 100+ Service Areas</a></p>
+          <p style="margin-top: 1rem;"><a href="/locations" class="btn btn--primary">View All 100+ Service Areas</a></p>
         </div>
 
         <!-- XML Sitemap -->
@@ -366,8 +366,8 @@
           <ul class="footer__links">
             <li><a href="/">Home</a></li>
             <li><a href="#about">About Us</a></li>
-            <li><a href="services/">Services</a></li>
-            <li><a href="locations/">Service Areas</a></li>
+            <li><a href="/services">Services</a></li>
+            <li><a href="/locations">Service Areas</a></li>
             <li><a href="#reviews">Reviews</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
@@ -377,11 +377,11 @@
         <div class="footer__col">
           <h4 class="footer__title">Our Services</h4>
           <ul class="footer__links">
-            <li><a href="services/janitorial-service/">Janitorial Service</a></li>
-            <li><a href="services/deep-cleaning/">Deep Cleaning</a></li>
-            <li><a href="services/carpet-cleaning/">Carpet Cleaning</a></li>
-            <li><a href="services/upholstery-cleaning/">Upholstery Cleaning</a></li>
-            <li><a href="services/general-housekeeping/">General Housekeeping</a></li>
+            <li><a href="/services/janitorial-service">Janitorial Service</a></li>
+            <li><a href="/services/deep-cleaning">Deep Cleaning</a></li>
+            <li><a href="/services/carpet-cleaning">Carpet Cleaning</a></li>
+            <li><a href="/services/upholstery-cleaning">Upholstery Cleaning</a></li>
+            <li><a href="/services/general-housekeeping">General Housekeeping</a></li>
           </ul>
         </div>
 
@@ -389,17 +389,17 @@
         <div class="footer__col">
           <h4 class="footer__title">Service Areas</h4>
           <div class="footer__cities">
-            <a href="locations/marlborough-ma.html">Marlborough</a>
-            <a href="locations/framingham-ma.html">Framingham</a>
-            <a href="locations/worcester-ma.html">Worcester</a>
-            <a href="locations/hudson-ma.html">Hudson</a>
-            <a href="locations/westborough-ma.html">Westborough</a>
-            <a href="locations/natick-ma.html">Natick</a>
-            <a href="locations/wellesley-ma.html">Wellesley</a>
-            <a href="locations/newton-ma.html">Newton</a>
+            <a href="/locations/marlborough-ma">Marlborough</a>
+            <a href="/locations/framingham-ma">Framingham</a>
+            <a href="/locations/worcester-ma">Worcester</a>
+            <a href="/locations/hudson-ma">Hudson</a>
+            <a href="/locations/westborough-ma">Westborough</a>
+            <a href="/locations/natick-ma">Natick</a>
+            <a href="/locations/wellesley-ma">Wellesley</a>
+            <a href="/locations/newton-ma">Newton</a>
           </div>
           <div class="footer__cities-more">
-            <a href="locations/">View All 100+ Cities →</a>
+            <a href="/locations">View All 100+ Cities →</a>
           </div>
         </div>
 
@@ -467,9 +467,9 @@
       <div class="footer__bottom">
         <p class="footer__copyright">&copy; 2025 Dorys Janitorial Cleaning Services Inc. All rights reserved.</p>
         <nav class="footer__legal">
-          <a href="privacy.html">Privacy Policy</a>
-          <a href="terms.html">Terms of Service</a>
-          <a href="sitemap.html">Sitemap</a>
+          <a href="/privacy">Privacy Policy</a>
+          <a href="/terms">Terms of Service</a>
+          <a href="/sitemap">Sitemap</a>
         </nav>
       </div>
     </div>
